2007-10-21  Sven Neumann  <sven@gimp.org>

	* app/dialogs/fade-dialog.c (fade_dialog_new): select "Normal"
	when the mode of the operation is "Replace". This is incorrect but
	it makes the dialog a lot easier to use.

2007-10-19  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-render.c: tiny cosmetic cleanups.

2007-10-18  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c (cdisplay_lcms_get_display_profile):
	introduced a utility function to retrieve the screen and monitor.

2007-10-18  Sven Neumann  <sven@gimp.org>

	* modules/colorsel_cmyk_lcms.c: ellipsize the profile label. If
	possible, use the profile description as we do in other places.

2007-10-18  Michael Natterer  <mitch@gimp.org>

	* libgimpmodule/gimpmoduledb.c (gimp_module_db_module_initialize):
	simply check for G_MODULE_SUFFIX and remove utility function
	is_valid_module_name().

2007-10-18  Sven Neumann  <sven@gimp.org>

	* app/config/gimpcoreconfig.c: lower the upper limit for
	"undo-levels", mainly for getting a smaller entry in the
	Preferences dialog.

	* libgimpwidgets/gimpmemsizeentry.c (gimp_memsize_entry_new):
	seven digits are enough for a memsize entry.
	
2007-10-18  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppropwidgets.c (gimp_prop_size_entry_new):
	moved the calculation of the number of characters to a utility
	function.

2007-10-18  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-render.c (box_filter): fixed
	calculation of the alpha value.

2007-10-17  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-render.c (box_filter): sprinkled
	some const qualifiers.

2007-10-17  Sven Neumann  <sven@gimp.org>

	* app/main.c: added back short versions of --gimprc option and
	--console-messages command-line options.

2007-10-17  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpselectionoptions.c: removed a frame.

	* app/tools/gimptransformoptions.c: tweaked layout to reduce
	horizontal extent.
